apps/cluster-signal/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cluster-signal
  labels:
    app.kubernetes.io/part-of: cluster-signal
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
